caternet/MouseTrap/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: MouseTrap-${CI_COMMIT_REF_NAME}
  namespace: apps
spec:
  selector:
    app: MouseTrap-${CI_COMMIT_REF_NAME}
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: mousetrap
    name: mousetrap
  type: NodePort
