caternet/MouseTrap/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mousetrap-${CI_COMMIT_REF_NAME}-miaou-net-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "500" 
    nginx.org/websocket-services: "MouseTrap-${CI_COMMIT_REF_NAME}"
spec:
  tls:
  - hosts:
    - mousetrap-${CI_COMMIT_REF_NAME}.miaou.net
    secretName: mousetrap-${CI_COMMIT_REF_NAME}-miaou-net-tls
  rules:
  - host: mousetrap-${CI_COMMIT_REF_NAME}.miaou.net
    http:
      paths:
      - path: /
        backend:
          serviceName: MouseTrap-${CI_COMMIT_REF_NAME}
          servicePort: 5000
